// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-1) > from(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS
-1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-2) > from(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be odd, got: -2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-3) > from(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS
-3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(-4) > from(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be odd, got: -4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be odd, got: 0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1) > from(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1.5) > from(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be an integer, got: 1.5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(2) > from(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be odd, got: 2
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3) > from(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS
3
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3.1) > from(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be an integer, got: 3.1
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(4) > from(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be odd, got: 4
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(5) > from(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS
5
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(99) > from(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS
99
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) > from(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be an integer, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) > from(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be an integer, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is("3") > is("3") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"3"
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-1) > is(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-2) > is(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-3) > is(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-4) > is(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1) > is(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1.5) > is(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(2) > is(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3) > is(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3.1) > is(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(4) > is(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(5) > is(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(99) > is(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(100) > is(100) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
100
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-1) > tryFrom(-1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-1
╠══════════════════════════════════════════════════╣ THEN RETURNS
-1
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-2) > tryFrom(-2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-2
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-3) > tryFrom(-3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3
╠══════════════════════════════════════════════════╣ THEN RETURNS
-3
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-4) > tryFrom(-4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-4
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1) > tryFrom(1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1
╠══════════════════════════════════════════════════╣ THEN RETURNS
1
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1.5) > tryFrom(1.5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(2) > tryFrom(2) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
2
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3) > tryFrom(3) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3
╠══════════════════════════════════════════════════╣ THEN RETURNS
3
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3.1) > tryFrom(3.1) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.1
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(4) > tryFrom(4) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
4
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(5) > tryFrom(5) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
5
╠══════════════════════════════════════════════════╣ THEN RETURNS
5
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(99) > tryFrom(99) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
99
╠══════════════════════════════════════════════════╣ THEN RETURNS
99
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) > tryFrom(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) > tryFrom(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;
